# Financial-Fraud-Credit-Risk-Detection-Platform

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: schemas.py  service.py
configs/: api.yaml  datasets.yaml  training.yaml
docs/: architecture.md  runbook.md
mlops/: drift_monitor.py  train_pipeline.py
src/: __init__.py
src/data_ingestion/: ingest.py  unpack.py
src/data_validation/: validator.py
src/drift_detection/: psi.py
src/explainability/: shap_explainer.py
src/feature_engineering/: features.py
src/model_evaluation/: evaluate.py
src/model_training/: train.py
src/utils/: io.py  logging.py
tests/: test_api.py  test_evaluation.py  test_features.py
