[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-risk-intelligence"
version = "0.1.0"
description = "Unified fraud detection and credit risk scoring for Indian BFSI"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 100
